Bug 291408 - search in System Settings should scroll first match into view
Summary: search in System Settings should scroll first match into view
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Christoph Feck
URL:
Keywords:
Depends on:
Blocks: extramile
  Show dependency treegraph
 
Reported: 2012-01-12 23:57 UTC by skierpage
Modified: 2012-11-30 21:00 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description skierpage 2012-01-12 23:57:20 UTC
Version:           1.0 (using KDE 4.7.3) 
OS:                Linux

I wanted to install a font, so I opened System Settings, clicked the search field, and entered "fon". Everything grayed out except Application Appearance (very nice!). The textbox dropdown suggested Font Installer (very nice!), so I chose that and pressed Enter. But nothing happened, because every visible icon was grayed out. ??! It was user error, I should have noticed the scroll bar and scrolled the "System Administration" section into view with Font Installer. But the software should help me out.

Reproducible: Always

Steps to Reproduce:
1. Resize System Settings window so not everything is visible (my default size shows nothing after "Hardware".
2. Enter/choose some term in search that only applies to an offscreen icon, such as "font installer" or "shutdown".

Actual Results:  
Everything visible grays out, no indication

Expected Results:  
If there's a match, the first matching icon should scroll into view, like most other search interfaces that highlight matching entries.

Also, pressing tab and then using the arrow keys and PgUp/PgDn to move around the various icons doesn't work well at all; I'll try to file a separate bug.
Comment 1 Christoph Feck 2012-11-10 22:55:29 UTC
http://git.reviewboard.kde.org/r/107284/
Comment 2 Christoph Feck 2012-11-14 13:36:48 UTC
Git commit bf40c5919b4442ac179e8deee894eb9de46a1ab4 by Christoph Feck.
Committed on 14/11/2012 at 14:35.
Pushed by cfeck into branch 'KDE/4.9'.

Scroll first match into view
FIXED-IN: 4.9.4
REVIEW: 107284

M  +12   -0    systemsettings/icons/IconMode.cpp

http://commits.kde.org/kde-workspace/bf40c5919b4442ac179e8deee894eb9de46a1ab4
Comment 3 Ben Cooksley 2012-11-30 21:00:05 UTC
Git commit 3eb3c667b1a1412f4f688eb9ff407caa139ab23d by Ben Cooksley, on behalf of Christoph Feck.
Committed on 14/11/2012 at 14:35.
Pushed by bcooksley into branch 'master'.

Scroll first match into view
FIXED-IN: 4.9.4
REVIEW: 107284
(cherry picked from commit bf40c5919b4442ac179e8deee894eb9de46a1ab4)

M  +12   -0    systemsettings/icons/IconMode.cpp

http://commits.kde.org/kde-workspace/3eb3c667b1a1412f4f688eb9ff407caa139ab23d