Scroll first match into view

BUG: 291408
FIXED-IN: 4.9.4
REVIEW: 107284